fix header dropdown z-index, add routerlink to abstract list item component

--- a/src/header/style.scss
+++ b/src/header/style.scss
@@ -20,6 +20,7 @@
         color: inherit;
         &:hover {
             text-decoration: none;
+            color: var(--nav-link-hover-color);
         }
     }
 }
@@ -33,6 +34,9 @@
 
     &.have-children {
         overflow: visible;
+    }
+    &.opened {
+        z-index: 5;
     }
 }
 
